badajoz_unida/badajoz_unida_front/src/app/modules/form-login/form-login/form-login.component.css
form {
  background-color: white;
}

form h1{
  margin-top: 5px;
  padding: 0 3rem;
  color: var(--primary-color);
  text-align: center;
  font-family: 'Open Sans', sans-serif;
  font-size: 40px;
  font-weight: bold;
}

form h2{
  margin-bottom: 2px;
  color: var(--secondary-color);
  text-align: center;
  font-family: 'Open Sans', sans-serif;
  font-size: 24px;
  font-weight: bold;
}

form .separador{
  width: 85%;
  height: .5px;
  margin: 10px auto;
  border-radius: 12px;
  background-color: var(--secondary-color-opacity);
}

form .input-group{
  width: 80%;
  display: block;
  margin: 15px auto 10px;
}

form .input-group.password{
  position: relative;
}

form .input-group.password i{
  position: absolute;
  bottom: .5rem;
  right: .5rem;
  cursor: pointer;
  z-index: 1000;
}

form input{
  width: 100%;
  padding: .5rem;
  font-size: 1rem;
}

form input:focus{
  border-bottom: 2px solid var(--text-base-color);
}

form > small{
  width: 80%;
  font-family: 'Open Sans', sans-serif;
  color: var(--primary-color);
}

.input-group small{
  display: block;
  font-weight: bold;
  margin-top: 20px;
  margin-bottom: 10px;
}

.button{
  width: 100%;
  padding: .6rem 1rem;
  color: var(--bg-color);
  font-weight: bold;
  font-size: 1.1rem;
  cursor: pointer;
  transition: all .3s ease-in-out;
  margin-bottom: 5px;
}

input.button{
  background-color: var(--primary-color);
}

button.button{
  border: 0;
  background-color: var(--secondary-color);
}

form input[type="submit"]{
  border: 0;
  transition: transform .5s ease-out;
  height: 100%;
}

form input[type="submit"]:hover{
  background-color: var(--primary-color-hover);
  transform: scale(1.02);
}

form a{
  font-size: .8rem;
  text-decoration: none;
}

img{
  width: 100%;
  height: auto;
}

@media only screen and (max-width: 900px) {
  .button.rounded-pill {
    padding: .2rem .2rem !important;
    font-size: .9rem !important;
    height: 50px !important;
    width: 100% !important;
  }

  .d-flex {
    width: 100% !important;
    flex-wrap: nowrap !important;
  }

  .mobile-visible {
    display: inline-block !important;
  }

  .sponsor-images {
    width: 100%;
    display: flex;
    justify-content: space-between;
  }

  .sponsor-images > div {
    flex: 1 1 33.33%;
  }

}

